@@ -758,7 +758,22 @@ var CloudCommander, Util, DOM, CloudFunc;
         }
         return lCurrent;
     };
-    
+        
+     /**
+     * unified way to get current file content
+     *
+     * @pCurrentFile
+     */
+    DOM.getCurrentFileContent       = function(pCallBack, pCurrentFile){
+        var lPath   = DOM.getCurrentPath(pCurrentFile),
+            lRet    = DOM.ajax({
+                url     : lPath,
+                error   : DOM.Images.showError,
+                success : Util.retExec(pCallBack)
+            });
+        
+        return lRet;
+    };
     
     /**
      * unified way to get RefreshButton
