@@ -76,29 +76,22 @@ var CloudCommander, Util, DOM, CloudFunc, $;
                         'gist': {
                             name: 'Gist',
                             callback: function(key, opt){
-                                var lCurrent    = DOM.getCurrentFile(), 
-                                    lPath       = DOM.getCurrentPath(),
-                                    lName       = DOM.getCurrentName(lCurrent);
+                                DOM.getCurrentFileContent(function(pData){
+                                    var lName = DOM.getCurrentName();
+                                    if( Util.isObject(pData) )
+                                        pData = JSON.stringify(pData, null, 4);
                                     
-                                DOM.ajax({
-                                    url     : lPath,
-                                    error   : DOM.Images.showError,
-                                    success : function(data, textStatus, jqXHR){
-                                        if( Util.isObject(data) )
-                                            data = JSON.stringify(data, null, 4);
-                                        
-                                        var lGitHub = cloudcmd.GitHub;
-                                        
-                                        if('init' in lGitHub)
-                                            lGitHub.createGist(data, lName);
-                                        else
-                                            Util.exec(cloudcmd.GitHub,
-                                                function(){
-                                                    lGitHub.createGist(data, lName);
-                                                });
-                                    }
+                                    var lGitHub = cloudcmd.GitHub;
+                                    
+                                    if('init' in lGitHub)
+                                        lGitHub.createGist(pData, lName);
+                                    else
+                                        Util.exec(cloudcmd.GitHub,
+                                            function(){
+                                                lGitHub.createGist(pData, lName);
+                                            });
                                 });
-                                    
+                            
                                 Util.log('Uploading to gist...');
                             }
                         },
@@ -107,38 +100,29 @@ var CloudCommander, Util, DOM, CloudFunc, $;
                             name: 'GDrive',
                             
                             callback: function(key, opt){
-                                    
-                                
-                                var lCurrent    = DOM.getCurrentFile(),
-                                    lPath       = DOM.getCurrentPath(),
-                                    lName       = DOM.getCurrentName(lCurrent);
-                                    
-                                DOM.ajax({
-                                    url     : lPath,
-                                    error   : DOM.Images.showError,
-                                    success : function(data, textStatus, jqXHR){
-                                        if( Util.isObject(data) )
-                                            data = JSON.stringify(data, null, 4);
-                                        var lData = {
-                                                data: data,
-                                                name: lName
-                                            };
-                                            
-                                        var lGDrive = cloudcmd.GDrive;
+                                DOM.getCurrentFileContent(function(data){
+                                    var lName = DOM.getCurrentName();
+                                     
+                                    if( Util.isObject(data) )
+                                        data = JSON.stringify(data, null, 4);
+                                    var lData = {
+                                            data: data,
+                                            name: lName
+                                        };
                                         
-                                        if('init' in lGDrive)
-                                            lGDrive.init(lData);
-                                        else
-                                            Util.exec(cloudcmd.GDrive, lData);
-                                        }
-                                    });
-                                
-                                    Util.log('Uploading to gdrive...');
-                                }
+                                    var lGDrive = cloudcmd.GDrive;
+                                    
+                                    if('init' in lGDrive)
+                                        lGDrive.init(lData);
+                                    else
+                                        Util.exec(cloudcmd.GDrive, lData);
+                                });
+                            
+                                Util.log('Uploading to gdrive...');
                             }
                         }
+                    }
                 },
-                
                 
                 download: {
                     name: 'Download',
